--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^6.3.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-with-firebase-auth": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
